tests/good/02_int_operators_2.ris
void main():
    let int a = 42;
    let int b = 10;
    
    println -a;
    println a + b;
    println a - b;
    println a * b;
    println a / b;
    println a % b;
    println a + b * a;
    
    println a != b;
    println a == b;
    println a > b;
    println a >= b;
    println a < b;
    println a <= b;

    return;