tests/bad/12_main_with_args_3.ris
int add(int a, int b):
    return a + b;

void main(int a, int b):
    add(a,b);
    return;